# DjView4Experimental

./: .gitignore  CMakeLists.txt  CMakePresets.json  NEWS  README  README.md  _msbuild_djview.bat  build_combined_release.bat  djview4.spec  vcpkg.json
.github/cache-keys/: windows-vcpkg-key.txt
.github/scripts/: detect-msvc-toolset.ps1  prepare-djvu-third-party.ps1
.github/workflows/: ci-manual.yml  ci.yml  linux-build.yml  windows-build-master-old.yml  windows-build.yml  windows-toolset-smoke.yml
ci/msbuild-smoke/: msbuild_smoke.cpp  msbuild_smoke.vcxproj
cmake/: FindLeptonica.cmake  GenerateBuildGitInfo.cmake  GetAvifPlugin.cmake  ProjectInit.cmake  RunWinDeployQt.cmake
config/: acinclude.m4
debian/: changelog  control  djview-plugin.install  djview4.install  rules
docs/: Doxyfile  smoke-test-checklist.md
src/: .gitignore  CMakeLists.txt  QRegExp  QRegExpValidator  build_git_info.h  djview.cpp  djview.pro  djview.vcxproj  djview.vcxproj.filters  djview_uk.ts  qdjview.cpp  qdjview.h  qdjviewdialogs.cpp  qdjviewexporters.cpp  qdjviewexportpdf.ui  qdjviewexporttiff.ui  qdjviewplugin.cpp  qdjviewprefs.cpp  qdjviewsidebar.cpp  qdjviewsidebar.h  qdjvu.cpp  qdjvuwidget.cpp  qdjvuwidget.h  version.h
